(Add): Booking fonctionnel

--- a/server/.env
+++ b/server/.env
@@ -39,3 +39,7 @@ JWT_PUBLIC_KEY=%kernel.project_dir%/config/jwt/public.pem
 JWT_PASSPHRASE=Jiaqi
 ###< lexik/jwt-authentication-bundle ###
 
+
+###> symfony/mailer ###
+MAILER_DSN=null://null
+###< symfony/mailer ###
