--- a/server/composer.json
+++ b/server/composer.json
@@ -17,7 +17,7 @@
         "doctrine/doctrine-migrations-bundle": "^3.4",
         "doctrine/orm": "^3.5",
         "lexik/jwt-authentication-bundle": "^3.1",
-        "nelmio/cors-bundle": "^2.5",
+        "nelmio/cors-bundle": "*",
         "phpdocumentor/reflection-docblock": "^5.6",
         "phpstan/phpdoc-parser": "^2.2",
         "symfony/asset": "7.3.*",
@@ -27,6 +27,8 @@
         "symfony/flex": "^2",
         "symfony/framework-bundle": "7.3.*",
         "symfony/mailer": "7.3.*",
+        "symfony/mailtrap-mailer": "7.3.*",
+        "symfony/mime": "7.3.*",
         "symfony/property-access": "7.3.*",
         "symfony/property-info": "7.3.*",
         "symfony/runtime": "7.3.*",
