chore: push remaining local changes (frontend, backend fixes)

--- a/server/.env
+++ b/server/.env
@@ -4,11 +4,14 @@ APP_SECRET=CHANGE_ME_SECRET
 ###< symfony/framework-bundle ###
 
 ###> doctrine/doctrine-bundle ###
-DATABASE_URL="mysql://bafode:04082023@127.0.0.1:3306/booking?serverVersion=8.0.32&charset=utf8mb4"
+# DATABASE_URL should be stored in server/.env.local (gitignored) or as environment secrets in your deployment platform
+# Example (do NOT commit):
+# DATABASE_URL="postgresql://postgres:YOUR_PASSWORD@db.<REF>.supabase.co:5432/postgres?sslmode=require&serverVersion=14&charset=utf8"
 ###< doctrine/doctrine-bundle ###
 
 ###> nelmio/cors-bundle ###
-CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
+# Allow localhost for dev and Vercel preview/production domains
+CORS_ALLOW_ORIGIN='^https?://(localhost|127\\.0\\.0\\.1|.*\\.vercel\\.app|your-production-domain\.com)(:[0-9]+)?$'
 ###< nelmio/cors-bundle ###
 
 ###> lexik/jwt-authentication-bundle ###
