--- a/server/fly.toml
+++ b/server/fly.toml
@@ -1,22 +1,22 @@
-# fly.toml - sample; run `fly launch` to create a proper one
-app = "booking-backend"
+# fly.toml app configuration file generated for booking-backend-cold-water-8579 on 2025-09-19T17:23:55+02:00
+#
+# See https://fly.io/docs/reference/configuration/ for information about how to use this file.
+#
+
+app = 'booking-backend-cold-water-8579'
+primary_region = 'cdg'
 
 [build]
-  image = ""
 
-[env]
-  APP_ENV = "prod"
-  APP_SECRET = "REPLACE_ME"
-  # DATABASE_URL will be set as secret in fly secrets
-
-[[services]]
+[http_service]
   internal_port = 8000
-  protocol = "tcp"
-  [services.concurrency]
-    type = "connections"
-    hard_limit = 25
-    soft_limit = 20
-  [[services.ports]]
-    handlers = ["http"]
-    port = 80
-***
+  force_https = true
+  auto_stop_machines = 'stop'
+  auto_start_machines = true
+  min_machines_running = 0
+  processes = ['app']
+
+[[vm]]
+  memory = '1gb'
+  cpu_kind = 'shared'
+  cpus = 1
