--- a/.github/workflows/deploy-backend-fly.yml
+++ b/.github/workflows/deploy-backend-fly.yml
@@ -28,7 +28,6 @@ jobs:
         env:
           FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
         run: |
-          cd server
-          # build not required if using dockerfile inside server
-          # use the installed flyctl binary from /tmp
-          /tmp/bin/flyctl deploy --config fly.toml
+          # Run flyctl from repository root so the Dockerfile's COPY ./server/ . works
+          # and point flyctl to the server's fly.toml and Dockerfile explicitly.
+          /tmp/bin/flyctl deploy --config server/fly.toml --dockerfile server/Dockerfile
