--- a/.github/workflows/vercel-deploy.yml
+++ b/.github/workflows/vercel-deploy.yml
@@ -1,40 +1,50 @@
-name: Deploy client to Vercel
+name: Deploy Frontend (Vercel) — optimized
 
 on:
   push:
     branches: [ main ]
     paths:
       - 'client/**'
-      - '.vercel/**'
+      - 'client/**/**'
 
 jobs:
   vercel-deploy:
     runs-on: ubuntu-latest
+    concurrency:
+      group: vercel-deploy-client
+      cancel-in-progress: true
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout
+        uses: actions/checkout@v4
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: '18'
 
+      - name: Cache node modules
+        uses: actions/cache@v4
+        with:
+          path: ~/.npm
+          key: ${{ runner.os }}-node-${{ hashFiles('client/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
+
       - name: Install dependencies
         working-directory: client
-        run: |
-          npm ci
+        run: npm ci
 
       - name: Build
         working-directory: client
-        run: |
-          npm run build
+        run: npm run build
 
-      - name: Deploy to Vercel
-        uses: amondnet/vercel-action@v20
-        with:
-          vercel-token: ${{ secrets.VERCEL_TOKEN }}
-          vercel-org-id: ${{ secrets.VERCEL_ORG_ID }}
-          vercel-project-id: ${{ secrets.VERCEL_PROJECT_ID }}
-          vercel-args: '--prod'
-          working-dir: client
+      - name: Deploy to Vercel (npx)
         env:
           VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
+        run: |
+          if [ -z "$VERCEL_TOKEN" ]; then
+            echo "Missing VERCEL_TOKEN secret. Add it under Settings → Secrets → Actions." >&2
+            exit 1
+          fi
+          cd client
+          npx --yes vercel --token "$VERCEL_TOKEN" --prod --confirm
